--- a/moments.html
+++ b/moments.html
@@ -72,6 +72,11 @@
                     onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Photo+6'">
                 <div class="caption">Forever</div>
             </div>
+            <div class="photo-card" style="transform: rotate(-2deg);">
+                <img src="assets/images/img13.jpeg" alt="Memory 7"
+                    onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Photo+7'">
+                <div class="caption">Unforgettable</div>
+            </div>
         </div>
 
         <a href="music.html" class="btn btn-loading hidden">Next Chapter</a>
