new ai photo added click here button updated

--- a/surprise.html
+++ b/surprise.html
@@ -205,45 +205,91 @@
             }
         }
 
+        /* Cinematic Modal Reveal */
         .secret-modal {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.95);
+            background: rgba(0, 0, 0, 0);
+            /* Starts transparent */
             display: flex;
             align-items: center;
             justify-content: center;
             z-index: 100;
-            opacity: 0;
             pointer-events: none;
-            transition: opacity 1s ease;
+            transition: background 2s cubic-bezier(0.22, 1, 0.36, 1);
         }
 
         .secret-modal.active {
-            opacity: 1;
+            background: rgba(0, 0, 0, 0.92);
+            /* Deep dark dim */
             pointer-events: auto;
         }
 
         .secret-content {
+            position: relative;
             text-align: center;
-            max-width: 600px;
-            padding: 2rem;
+            max-width: 700px;
+            padding: 4rem 3rem;
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(197, 160, 89, 0.3);
+            border-radius: 4px;
+            /* Classy sharp corners or slight round */
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.6);
+            backdrop-filter: blur(10px);
+
+            /* Initial State */
+            opacity: 0;
+            transform: translateY(60px) scale(0.95);
+            transition: opacity 1.5s ease 0.5s, transform 2s cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
+        }
+
+        .secret-modal.active .secret-content {
+            opacity: 1;
+            transform: translateY(0) scale(1);
+        }
+
+        /* Decorative Elements on Card */
+        .secret-content::before {
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            bottom: 10px;
+            border: 1px solid rgba(197, 160, 89, 0.1);
+            pointer-events: none;
         }
 
         .secret-msg {
-            font-family: var(--font-heading);
+            font-family: 'Courier New', monospace;
+            /* Mono font */
             font-size: 2rem;
-            color: #fff;
+            /* Adjusted for mono readability */
+            font-style: normal;
+            color: #ffffff;
+            /* White text */
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            /* White glow */
             line-height: 1.6;
-            margin-bottom: 2rem;
-            transform: translateY(20px);
-            transition: transform 1s ease;
+            margin-bottom: 3rem;
+            letter-spacing: 1px;
         }
 
-        .secret-modal.active .secret-msg {
-            transform: translateY(0);
+        .secret-close {
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 0.8rem;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: color 0.5s;
+            margin-top: 2rem;
+        }
+
+        .secret-close:hover {
+            color: var(--accent-gold);
         }
 
         .secret-close {
@@ -255,7 +301,23 @@
         }
 
         .secret-close:hover {
-            color: #fff;
+            color: var(--accent-gold);
+        }
+
+        @keyframes riseUp {
+            0% {
+                transform: translateY(0) scale(1);
+                opacity: 0;
+            }
+
+            20% {
+                opacity: 0.8;
+            }
+
+            100% {
+                transform: translateY(-80vh) scale(0.5);
+                opacity: 0;
+            }
         }
 
         /* Final Quote after Heartbeat */
@@ -494,7 +556,45 @@
         // --- 5. Secret Modal Logic ---
         function revealSecret() {
             const modal = document.getElementById('secret-modal');
+
+            // 1. Activate Modal (Background dims first)
             modal.classList.add('active');
+
+            // 2. Spawn Cinematic Particles inside modal (gold dust)
+            // We'll create a container for them if it doesn't exist
+            let particleContainer = document.getElementById('cinema-particles');
+            if (!particleContainer) {
+                particleContainer = document.createElement('div');
+                particleContainer.id = 'cinema-particles';
+                particleContainer.style.position = 'absolute';
+                particleContainer.style.top = '0';
+                particleContainer.style.left = '0';
+                particleContainer.style.width = '100%';
+                particleContainer.style.height = '100%';
+                particleContainer.style.pointerEvents = 'none';
+                particleContainer.style.zIndex = '-1'; /* Behind text */
+                modal.appendChild(particleContainer);
+            }
+
+            // Burst logic for slow rising gold dust
+            for (let i = 0; i < 30; i++) {
+                const p = document.createElement('div');
+                p.style.position = 'absolute';
+                p.style.width = Math.random() * 3 + 'px';
+                p.style.height = p.style.width;
+                p.style.background = 'var(--accent-gold)';
+                p.style.borderRadius = '50%';
+                p.style.opacity = '0';
+                p.style.left = Math.random() * 100 + '%';
+                p.style.top = '100%';
+                p.style.animation = `riseUp ${Math.random() * 3 + 3}s ease-out forwards`;
+                p.style.animationDelay = Math.random() * 1 + 's';
+                p.style.boxShadow = '0 0 10px var(--accent-gold)';
+                particleContainer.appendChild(p);
+
+                // Cleanup
+                setTimeout(() => p.remove(), 6000);
+            }
         }
 
         function closeSecret() {
