--- a/moments.html
+++ b/moments.html
@@ -77,6 +77,11 @@
                     onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Photo+7'">
                 <div class="caption">Unforgettable</div>
             </div>
+            <div class="photo-card" style="transform: rotate(3deg);">
+                <img src="assets/images/img15.PNG" alt="Memory 8"
+                    onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Photo+8'">
+                <div class="caption">Timeless</div>
+            </div>
         </div>
 
         <a href="music.html" class="btn btn-loading hidden">Next Chapter</a>
