ai photo chanaged and added some animaton extra

--- a/moments.html
+++ b/moments.html
@@ -78,9 +78,9 @@
                 <div class="caption">Unforgettable</div>
             </div>
             <div class="photo-card" style="transform: rotate(3deg);">
-                <img src="assets/images/img15.PNG" alt="Memory 8"
+                <img src="assets/images/img16.png" alt="Memory 8"
                     onerror="this.src='https://via.placeholder.com/300x450/111/fff?text=Photo+8'">
-                <div class="caption">Timeless</div>
+                <div class="caption">retro</div>
             </div>
         </div>
 
